formver.compiler-plugin/testData/diagnostics/conversion/nameing/havoc_method_ref_typed_collision.kt
// NEVER_VALIDATE
// FULL_VIPER_DUMP

class B()

class A(var ref: B)

fun <!VIPER_TEXT!>`havoc$B`<!>() {}

fun <!VIPER_TEXT!>havocMethodRefTypedCollision<!>(a: A) {
    val local = a.ref
    `havoc$B`()
    local
}
